# solvelicita-engine

./: .env.example  .gitignore  LICENSE  README.md  load_historical.py  pipeline.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pipeline_cauc_daily.yml  pipeline_dispatch.yml  pipeline_incremental_monthly.yml  pipeline_incremental_weekly.yml  pipeline_nacional_full.yml  pipeline_national_dispatch.yml  pipeline_regional_manual.yml  pipeline_state_runner.yml
app/data/: pb_score.geojson
data/outputs/: score_municipios_pb_pncp.csv
data/processed/: municipios_pb_tabela.csv
dbt/: dbt_project.yml  profiles.yml.example
dbt/seeds/: cauc_requisitos.csv
docs/: METODOLOGIA.md  VALIDACAO.md  frontend-runtime-contract.md
frontend/: middleware.js
frontend/components/: AboutPage.jsx  DashboardPage.jsx  MapaBrasil.jsx  MapaCoropletico.jsx  SiteFooter.jsx  SiteLayout.jsx
frontend/lib/: siteData.js  (+2 more)
scripts/: bq_credit_probe.py
tests/: test_autonomia_regional_config.py  test_bigquery_loader.py  test_bigquery_strict_mode.py  test_br_regions.py  test_classifier.py  test_collectors_municipios_dependency.py  test_dca_collector.py  test_municipios_collector.py  test_packaging_contract.py  test_paths_contract.py  test_pipeline_contract_baseline.py  test_pipeline_jobs_contract.py  test_pipeline_orchestrator.py  test_pncp_collector.py  test_postprocessors_loader_integration.py  test_run_observability_contract.py  test_scorers.py  test_settings_contract.py  test_siconfi_collector.py  test_siconfi_icf_collector.py  test_snapshot_publisher.py  test_supabase_sync.py
(+65 files in other folders)
